fix(frontend): header z-index, menu max-width

--- a/httpd/assets/src/scss/_nav.scss
+++ b/httpd/assets/src/scss/_nav.scss
@@ -21,6 +21,7 @@ nav {
         left: -100vw;
         top: calc((var(--grid-base) * 4) + var(--font-size-big) + (var(--font-size-big) / 4));
         width: 100vw;
+        max-width: 280px;
         height: calc(100vh - (var(--grid-base) * 2) - var(--font-size-big));
         background: var(--lighter-bg-color);
         transition: left 150ms ease-out;
